--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <header class="major">
                 <h2>About Me.</h2>
             </header>
-            <p>
-                I'm a 26 year old part time Yoga Instructor. After Growing up with a Software Consultant father, I am now making my transition into
-                the exciting ever changing tech field! When I'm not in school you can find me doing yoga, and rasing money to help animals in need.</p>
+            <<!--p>
+                I'm a 26 year old part time Yoga Instructor. Growing up with a Software Consultant father, I am now making my transition into
+                the exciting ever changing tech field! When I'm not in school you can find me doing yoga, and raising money to help animals in need.</p>-->
                 
                <p> I am currently attending We Can Code IT, learning in demand front-end and back-end development.
-                In September 2016 I will receive a certificate in Software Engineering and be seeking a full time position as a
-                Junior Web Developer/ Software Engineer in the Cleveland or Columbus area. In addition to coding, I am a part time Yoga Instuctor.
+                In September 2016 I will receive a Software Engineer certification and be seeking a full time position as a
+                Junior Web Developer/Software Engineer in the Cleveland/Columbus area. In addition to coding, I am a part time Yoga Instuctor.
 
                 <br /> C# | .Net | HTML | ASP.NET | MVC | GIT | SQL
             </p>
