grammer/ add and delete text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h3>Summer School Enrollment</h3>
                     <p>
                         Using C#, the enrollment page allows you to see list and number of enrollrolled students, including not allowing certain students to enroll or get
-                        discounted enrollment. It also keeps a running total of all enrollment as well as individual total.
+                        discounted enrollment. It also keeps a running total of all enrollment, as well as individual total.
                     </p>
                     <div>
                         <a href="https://github.com/Hollymr/summer-school-mvc" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
@@ -76,7 +76,7 @@
                 <article class="6u 12u$(xsmall) work-item">
                     <a href="images/UnityGame.PNG" class="image fit thumb"><img src="images/UnityGame.PNG" alt="" /></a>
                     <h3>Table Maze</h3>
-                    <p>I used Unity with C# to create a maze in which you navigate a marble through by tilting the plane.</p>
+                    <p>I used Unity with C# to create a maze in which you navigate a marble by tilting the plane.</p>
                     <div>
                         <a href="https://github.com/Hollymr/weekend-project" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
 
@@ -85,7 +85,7 @@
                 <article class="6u$ 12u$(xsmall) work-item">
                     <a href="images/UnityGameWin.PNG" class="image fit thumb"><img src="images/UnityGameWin.PNG" alt="" /></a>
                     <h3>Table Maze WIN</h3>
-                    <p>To make the game a little more interesting I had the players pick up cubes with the game ending 
+                    <p>To make the game a little more interesting, I had the players pick up cubes with the game ending 
                     when they picked up the tenth cube.</p>
                     <div>
                         <a href="https://github.com/Hollymr/weekend-project" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
@@ -104,7 +104,7 @@
                 <article class="6u$ 12u$(xsmall) work-item">
                     <a href="images/VirtualPetOptions.PNG" class="image fit thumb"><img src="images/VirtualPetOptions.PNG" alt="" /></a>
                     <h3>Virtual Pet Start Screen</h3>
-                    <p>This application allows you to feed, play, and take your pet shark out which will effect the hunger, waste, and play to increase or decrease.</p>
+                    <p>This application allows you to feed, play with or take your pet shark out which will effect the hunger, waste, and play to increase or decrease.</p>
                     <div>
                         <a href="https://github.com/Hollymr/virtual-pet" title="GitHub" class="icon fa-github"><span class="label" title="GitHub">Github</span></a>
                     </div>
