source code title

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h3>Summer School Home</h3>
                     <p>This is a simple home page I developed using CSS/HTML, allowing faculty quick access to enrolling students.</p>
                     <div>
-                        <a href="https://github.com/Hollymr/summer-school-mvc" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
+                        <a href="https://github.com/Hollymr/summer-school-mvc" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
 
                     </div>
                 </article>
@@ -69,44 +69,44 @@
                         discounted enrollment. It also keeps a running total of all enrollment, as well as individual total.
                     </p>
                     <div>
-                        <a href="https://github.com/Hollymr/summer-school-mvc" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
-
+                        <a href="https://github.com/Hollymr/summer-school-mvc" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
                     </div>
                 </article>
                 <article class="6u 12u$(xsmall) work-item">
-                    <a href="images/UnityGame.PNG" class="image fit thumb"><img src="images/UnityGame.PNG" alt="" /></a>
+                    <a href="images/UnityGame.PNG" class="image fit thumb"><img src="images/UnityGame.PNG" alt="Unity Table Maze" /></a>
                     <h3>Table Maze</h3>
                     <p>I used Unity with C# to create a maze in which you navigate a marble by tilting the plane.</p>
                     <div>
-                        <a href="https://github.com/Hollymr/weekend-project" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
+                        <a href="https://github.com/Hollymr/weekend-project" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
+                        
 
                     </div>
                 </article>
                 <article class="6u$ 12u$(xsmall) work-item">
-                    <a href="images/UnityGameWin.PNG" class="image fit thumb"><img src="images/UnityGameWin.PNG" alt="" /></a>
+                    <a href="images/UnityGameWin.PNG" class="image fit thumb"><img src="images/UnityGameWin.PNG" alt="Unity Table Maze Win" /></a>
                     <h3>Table Maze WIN</h3>
                     <p>To make the game a little more interesting, I had the players pick up cubes with the game ending 
                     when they picked up the tenth cube.</p>
                     <div>
-                        <a href="https://github.com/Hollymr/weekend-project" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
+                        <a href="https://github.com/Hollymr/weekend-project" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
 
                     </div>
                 </article>
                 <article class="6u 12u$(xsmall) work-item">
-                    <a href="images/VirtualPetHome.PNG" class="image fit thumb"><img src="images/VirtualPetHome.PNG" alt="" /></a>
+                    <a href="images/VirtualPetHome.PNG" class="image fit thumb"><img src="images/VirtualPetHome.PNG" alt="Virtual Pet Home" /></a>
                     <h3>Virtual Pet Home</h3>
                     <p>Virtual Pet is a basic C# console application.</p>
                     <div>
-                        <a href="https://github.com/Hollymr/virtual-pet" title="GitHub" class="icon fa-github"><span class="label">Github</span></a>
+                        <a href="https://github.com/Hollymr/virtual-pet" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
 
                     </div>
                 </article>
                 <article class="6u$ 12u$(xsmall) work-item">
-                    <a href="images/VirtualPetOptions.PNG" class="image fit thumb"><img src="images/VirtualPetOptions.PNG" alt="" /></a>
+                    <a href="images/VirtualPetOptions.PNG" class="image fit thumb"><img src="images/VirtualPetOptions.PNG" alt="Virtual Pet Start" /></a>
                     <h3>Virtual Pet Start Screen</h3>
                     <p>This application allows you to feed, play with or take your pet shark out which will effect the hunger, waste, and play to increase or decrease.</p>
                     <div>
-                        <a href="https://github.com/Hollymr/virtual-pet" title="GitHub" class="icon fa-github"><span class="label" title="GitHub">Github</span></a>
+                        <a href="https://github.com/Hollymr/virtual-pet" title="Source Code" class="icon fa-github"><span class="label" title="GitHub">Github</span></a>
                     </div>
                 </article>
             </div>
