buttons to github code, picture resized

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <header id="header">
         <div class="headshot">
         <a href="#" class="image avatar">
-            <img src="images/rezised headshot.jpg" alt="Headshot" style="border: 500px" /> </a>
+            <img src="images/cropped headshot.jpg"
+            alt="Headshot" style="border: 500px" /> </a>
         <h1><strong>Hello, I'm Holly Rhodes.</strong><br /></h1>
         <h5>Software Engineer Apprentice at We Can Code IT.<br /></h5>
        </div>
@@ -65,7 +66,7 @@
                     <a href="images/SummerSchoolEnroll.PNG" class="image fit thumb"><img src="images/SummerSchoolEnroll.PNG" alt="Summer School MVC Enroll" /></a>
                     <h3>Summer School Enrollment</h3>
                     <p>
-                        Using C#, the enrollment page allows you to see list and number of enrollrolled students, including not allowing certain students to enroll or get
+                        Using C#, the enrollment page allows you to see list and number of enrolled students, including not allowing certain students to enroll or get
                         discounted enrollment. It also keeps a running total of all enrollment, as well as individual total.
                     </p>
                     <div>
