--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 the exciting ever changing tech field! When I'm not in school you can find me doing yoga, and raising money to help animals in need.</p>-->
                 
                <p> I am currently attending We Can Code IT, learning in demand front-end and back-end development.
-                In September 2016 I will receive a Software Engineer certification and be seeking a full time position as a
+                In September 2016, I will receive a Software Engineer certification and be seeking a full time position as a
                 Junior Web Developer/Software Engineer in the Cleveland/Columbus area. In addition to coding, I am a part time Yoga Instuctor.
 
                 <br /> C# | .Net | HTML | ASP.NET | MVC | GIT | SQL
@@ -66,8 +66,8 @@
                     <a href="images/SummerSchoolEnroll.PNG" class="image fit thumb"><img src="images/SummerSchoolEnroll.PNG" alt="Summer School MVC Enroll" /></a>
                     <h3>Summer School Enrollment</h3>
                     <p>
-                        Using C#, the enrollment page allows you to see list and number of enrolled students, including not allowing certain students to enroll or get
-                        discounted enrollment. It also keeps a running total of all enrollment, as well as individual total.
+                        Using C# the enrollment page allows you to see a list of the number of students with additional capabilities of not allowing select
+                        students to enroll or recieve a discount. It also keeps a running total of all enrollment, as well as individual total.
                     </p>
                     <div>
                         <a href="https://github.com/Hollymr/summer-school-mvc" title="Source Code" class="icon fa-github"><span class="label">Github</span></a>
