--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 In September 2016, I will receive a Software Engineer certification and be seeking a full time position as a
                 Junior Web Developer/Software Engineer in the Cleveland/Columbus area. In addition to coding, I am a part time Yoga Instuctor.
 
-                <br /> C# | .Net | HTML | CSS | Object Oriented Programming | ASP.NET | MVC | GIT | SQL | JavaScript | jQuery
+                <br /> C# | .Net | HTML | CSS | Object Oriented Programming | ASP.NET MVC | GIT | SQL | JavaScript | jQuery | Database Design
             </p>
             <!--<ul class="actions">
                 <li><a href="#" class="button">Learn More</a></li>
